# rosette_layer_rl

./: README.md  pyproject.toml
outputs/: experiment_returns.csv  experiment_summary.csv  experiment_summary_table.md  layer_analysis.csv  selected_layer.txt
paper/: dummy_paper.md
scripts/: export_markdown_tables.py  run_all.py  run_experiments.py  run_layer_analysis.py
src/rl_rosetta_layer/: __init__.py  agent.py  analysis.py  envs.py  layers.py
